--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,11 +8,11 @@ RUN pip install -r requirements.txt --no-cache-dir
 
 COPY . .
 
-RUN python manage.py makemigrations
+#RUN python manage.py makemigrations
 
-RUN python manage.py migrate
+#RUN python manage.py migrate
 
 # Test-data import
-RUN python manage.py testimport
+#RUN python manage.py testimport
 
 CMD ["python", "manage.py", "runserver", "0:8000"]
