--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,1 +1,23 @@
 version: '3'
+
+volumes:
+  pg_data:
+
+services:
+  db:
+    container_name: db
+    image: postgres:13.10
+    env_file: .env
+    volumes:
+      - pg_data:/var/lib/postgresql/data
+    ports:
+      - 5432:5432
+
+  backend:
+    container_name: backend
+    image: daniilfedotov/ctrade_backend
+    env_file: ./backend/.env
+    depends_on:
+      - db
+    ports:
+      - 8000:8000
