--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,5 @@
 SECRET_KEY=XYZ
-ALLOWED_HOSTS=127.0.0.1,localhost
+ALLOWED_HOSTS=127.0.0.1,localhost,backend
 POSTGRES_DB=user
 POSTGRES_USER=user
 POSTGRES_PASSWORD=123
