--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,16 +3,10 @@ FROM python:3.10-alpine
 WORKDIR /app
 
 COPY requirements.txt .
+COPY  --chmod=0755 entrypoint.sh .
 
+RUN chmod u+x entrypoint.sh
+RUN pip install --upgrade pip
 RUN pip install -r requirements.txt --no-cache-dir
 
 COPY . .
-
-#RUN python manage.py makemigrations
-
-#RUN python manage.py migrate
-
-# Test-data import
-#RUN python manage.py testimport
-
-CMD ["python", "manage.py", "runserver", "0:8000"]
