--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,9 @@ services:
     depends_on:
       db:
         condition: service_healthy
+    command:
+      - /bin/sh
+      - "/app/entrypoint.sh"
     ports:
       - "8000:8000"
 
