--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - "5432:5432"
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U django_user"]
+    restart: unless-stopped
 
   backend:
     container_name: backend
@@ -27,6 +28,7 @@ services:
       - "/app/entrypoint.sh"
     ports:
       - "8000:8000"
+    restart: unless-stopped
 
   tg_bot:
     container_name: tg_bot
@@ -34,3 +36,4 @@ services:
     env_file: ./tg_bot/.env
     depends_on:
       - backend
+    restart: unless-stopped
