--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,20 @@
+# Django settings.
+SECRET_KEY=XYZ  # Django secret key.
+ALLOWED_HOSTS=127.0.0.1,localhost,backend  # Host/domain names that Django site can serve.
+
+# Postgres settings.
 POSTGRES_DB=user
 POSTGRES_USER=user
 POSTGRES_PASSWORD=123
 DB_HOST=db
 DB_PORT=5432
+
+# Telegram bot settings.
+TELEGRAM_TOKEN=XYZ  # Token for working with Telegram Bot API.
+TELEGRAM_CHAT_ID=XYZ  # ID of the chat to which the bot should send a message.
+
+# Exchange settings for selected exchange.
+BYBIT_API_KEY=XYZ  # API key for Bybit exchange.
+BYBIT_SECRET_KEY=XYZ  # Secret key for Bybit exchange.
+BINANCE_API_KEY=XYZ  # API key for Binance exchange.
+BINANCE_SECRET_KEY=XYZ  # Secret key for Binance exchange.
