--- a/trading/requirements.txt
+++ b/trading/requirements.txt
@@ -1,8 +1,12 @@
 certifi==2024.2.2
 charset-normalizer==3.3.2
+flake8==7.0.0
 idna==3.6
+mccabe==0.7.0
 pybit==5.6.2
+pycodestyle==2.11.1
 pycryptodome==3.20.0
+pyflakes==3.2.0
 python-dotenv==1.0.1
 requests==2.31.0
 urllib3==2.2.1
